feat: 이미 리뷰가 남겨진 케이스 커버